--- a/requirements.txt
+++ b/requirements.txt
@@ -3,16 +3,16 @@ Flask==3.0.0
 
 # Database
 psycopg2-binary==2.9.9
+sqlalchemy==2.0.29
 
 # API handling
 requests==2.31.0
 
 # Data handling and serialization
 pandas==2.2.1
-sqlalchemy==2.0.29
 
 # Environment variables
 python-dotenv==1.0.1
 
-# If using Flask-Migrate
+# Database migrations (if using Flask-Migrate)
 Flask-Migrate==4.0.7
